# solana-ua-bootcamp-2024-08-06

./: .gitignore  Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
practice-1/: Cargo.toml  README.md  check-balance.ts  load-keypairs.ts
practice-1/src/: main.rs
practice-2/: .env  Cargo.toml  README.md  create-token-account.ts  create-token-metadata.ts  create-token-mint.ts  mint-token-multisig.ts  mint-tokens-no-commission.ts  mint-tokens.ts  send-sol.ts  send-tokens-no-commission.ts  send-tokens-nonce.ts
practice-2/create-token-metadata/: Cargo.toml
practice-2/create-token-metadata/src/: main.rs
practice-2/favorites/: Anchor.toml
practice-2/favorites/programs/favorites/src/: lib.rs
practice-2/favorites/tests/: favorites.ts
practice-2/src/: create-token-account.rs  create-token-mint.rs  lib.rs  mint-tokens.rs  send-sol.rs
practice-3/: README.md
practice-3/escrow/: Anchor.toml
practice-3/escrow-approve/: Anchor.toml  package.json
practice-3/escrow-approve/programs/escrow-approve/: Cargo.toml
practice-3/escrow-approve/programs/escrow-approve/src/: lib.rs
practice-3/escrow-approve/tests/: escrow-approve.test.ts
practice-3/escrow/programs/escrow/src/: lib.rs
practice-3/escrow/tests/: escrow.test.ts
practice-3/favorites/: Anchor.toml  package.json
practice-3/favorites/programs/favorites/src/: lib.rs
practice-3/favorites/tests/: favorites.test.ts  system-program-errors.ts
programs/solana-nft-anchor/: Cargo.toml
programs/solana-nft-anchor/src/: lib.rs
tests/: solana-nft-anchor.ts
(+7 files in other folders)
